trunk/Archive2/93/15676f2fc863a9/output
main.cpp:2:5: warning: implicit declaration of function 'f' is invalid in C99 [-Wimplicit-function-declaration]
    f();
    ^
main.cpp:5:6: error: conflicting types for 'f'
void f() {}
     ^
main.cpp:2:5: note: previous implicit declaration is here
    f();
    ^
1 warning and 1 error generated.
